# jura

./: .gitignore  Cargo.toml  README.md  SKILL.md  jura-cli.skill
src/: cli.rs  config.rs  git.rs  main.rs
src/cache/: storage.rs
src/jira/: client.rs  models.rs
src/tui/: app.rs  mod.rs
src/tui/views/: create_ticket.rs  filter_panel.rs  help.rs  mod.rs  settings.rs  ticket_detail.rs  ticket_list.rs  ticket_search.rs  transition_picker.rs
