[package]
name = "jura"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jura"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.29", features = ["crossterm"] }
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tui-textarea = { version = "0.7", features = ["crossterm", "ratatui"] }
